(Version: 0.56) => #1969 (Eva) Custom Feature - Pacific Coast Energy Company 8/26/22 => Monthly limit related changes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,8 @@
     <string name="fuel_history">Fuel History</string>
     <string name="regi">Registration</string>
     <string name="support_line"><u>For 24/7 Support</u></string>
-    <string name="no_internet">The system has detected that you do not have cellular service and offline options are not enabled. Please contact your Manger.</string>
-    <string name="server_connection_problem">The system has detected that you do not have cellular service and offline options are not enabled. Please contact your Manger.</string>
+    <string name="no_internet">The system has detected that you do not have cellular service and offline options are not enabled. Please contact your Manager.</string>
+    <string name="server_connection_problem">The system has detected that you do not have cellular service and offline options are not enabled. Please contact your Manager.</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_fob_reader">FobReader</string>
 
@@ -266,10 +266,9 @@
     <string name="AccessDeviceReadSuccess">Access Device Read Successfully</string>
     <string name="AccessDeviceAssignedToVehicle">You have presented a device that is already assigned to Vehicle %1$s. Please scan another device.</string>
 
-    <string name="BTLinkPageMsg">The LINK you have selected is not configured. Please select the link from the following list.
-If the link is not in the list please click the button "Pair new LINK"  which will advance to the Bluetooth page.  Once you see the LINK name which you are attempting to select, select it on the next page and then click pair. If you do not see this LINK in the next page, reset power and try again. If after resetting power, you still do not see this LINK name, please call into Support.</string>
+    <string name="BTLinkPageMsg">The LINK you have selected is not configured. Please select the link from the following list. If the link is not in the list please click the button "Pair new LINK" which will advance to the Bluetooth page. Once you see the LINK name which you are attempting to select, select it on the next page and then click pair. If you do not see this LINK in the next page, reset power and try again. If after resetting power, you still do not see this LINK name, please call into Support.</string>
     <string name="BTLinkNotInPairList">The LINK you have selected is not currently paired. We are advancing to the BlueTooth page. Once you see the LINK name which you are attempting to select, select it on the next page and then click pair. If you do not see this LINK in the next page, reset power and try again. If after resetting power, you still do not see this LINK name, please call into Support</string>
-    <string name="askreplacehub">"HUB Name is entered that already has an existing device assigned. Would you like to replace your existing device with this one. By pressing proceed here you will be replacing this HUB's exisitng device with this unit. This Action must be performed by someone who has Access to the Cloud. If you are someone with a CustomerAdmin profile in the Cloud, please enter the email and password you use to log into the Cloud below. Would you like to proceed?" </string>
+    <string name="askreplacehub">"HUB Name is entered that already has an existing device assigned. Would you like to replace your existing device with this one. By pressing proceed here you will be replacing this HUB's existing device with this unit. This Action must be performed by someone who has Access to the Cloud. If you are someone with a CustomerAdmin profile in the Cloud, please enter the email and password you use to log into the Cloud below. Would you like to proceed?" </string>
 
     <string name="prevReading">You have entered a reading that was previously entered. Please check and try again. If the issue persists, please contact your Manager.</string>
     <string name="peHour0">Please enter hours greater than 0.</string>
