(Version: 0.57) => Few remaining spanish messages.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,15 @@
     <string name="DeviceName">Device Name</string>
     <string name="DeviceMacAddress">Device Mac Address</string>
     <string name="IMEIAlreadyExist">Your IMEI Number already EXISTS!</string>
+    <string name="CloseApp">Close App</string>
+    <string name="RestartApp">Restart App</string>
+    <string name="ShowReaderStatus">Show Reader Status</string>
+    <string name="RebootReader">Reboot reader</string>
+    <string name="ReconnectBLEReaders">Reconnect BLE Readers</string>
+    <string name="OnlineMenu">Online</string>
+    <string name="OfflineMenu">Offline</string>
+    <string name="CameraMenu">Camera</string>
+    <string name="ReloadMenu">Reload</string>
 
     <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
     <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
@@ -285,6 +294,7 @@
     <string name="PairingMode">Pairing Mode...</string>
     <string name="SelectHoseAlert">Please select Hose</string>
     <string name="UnableToGetHoseList">Unable to get hose list from server</string>
+    <string name="HoseListIsNotAvailable">Hose list is not available</string>
 
     <string name="Quantity">Quantity:</string>
     <string name="Pulse">Pulse:</string>
@@ -405,5 +415,12 @@
     <string name="PartiallyCompleted">Link Re-configuration is partially completed. Please remove app from Recent Apps and start app again.</string>
     <string name="MacAddressUpdated">Mac Address Updated</string>
     <string name="MacAddressNotUpdated">MAC address could not be updated</string>
+
+    <!-- LINK Upgrade process -->
+    <string name="FileDownloadInProgress">Upgrade file download in progress.</string>
+    <string name="SoftwareUpdateInProgress">Software update in progress.</string>
+    <string name="ConnectingToTheLINK">Connecting to the LINK.</string>
+    <string name="LINKConnectionLost">LINK connection lost.</string>
+    <string name="PleaseWaitSeveralSeconds">Please wait several seconds...</string>
 
 </resources>
