--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,8 @@
     <string name="DeviceName">Device Name</string>
     <string name="DeviceMacAddress">Device Mac Address</string>
     <string name="IMEIAlreadyExist">Your IMEI Number already EXISTS!</string>
+    <string name="CloseBtn">Close</string>
+    <string name="AddLink">Add LINK</string>
     <string name="CloseApp">Close App</string>
     <string name="RestartApp">Restart App</string>
     <string name="ShowReaderStatus">Show Reader Status</string>
@@ -52,6 +54,7 @@
     <string name="OfflineMenu">Offline</string>
     <string name="CameraMenu">Camera</string>
     <string name="ReloadMenu">Reload</string>
+    <string name="PleaseWaitForHotspotConnect">Connecting to the hotspot. Please wait...</string>
 
     <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
     <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
