(Version: 0.60) => #2060 (Bolong) BT Link pulser type selector 11/15/2022.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="CameraMenu">Camera</string>
     <string name="ReloadMenu">Reload</string>
     <string name="PleaseWaitForHotspotConnect">Connecting to the hotspot. Please wait...</string>
+    <string name="EmptyTankWarning">This tank level is low. Please contact your Manager.</string>
 
     <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
     <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
