(Version: V1.8) => 1. #2562 (Brandon) Android 14 HUB Application Issues 3/25/24., 2. #2558 (Jake) Hose in use displaying on single hose systems 3/19/24.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -302,6 +302,7 @@
     <string name="UnableToGetHoseList">Unable to get hose list from server</string>
     <string name="HoseListIsNotAvailable">Hose list is not available</string>
     <string name="OneOfTheHoseIsBusy">One of the hose is busy, please try again later.</string>
+    <string name="SingleHoseBusyStatus">Fueling...</string>
 
     <string name="Quantity">Quantity:</string>
     <string name="Pulse">Pulse:</string>
